<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation1"
            android:checked="false"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/navigation2"
            android:checked="false"
            android:icon="@drawable/ic_list"
            android:title="@string/navigation_view_item_2" />
    </group>

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation3"
            android:checked="false"
            android:icon="@drawable/ic_about"
            android:title="@string/navigation_view_item_3" />

        <item
            android:id="@+id/navigation4"
            android:checked="false"
            android:icon="@drawable/ic_help"
            android:title="@string/navigation_view_item_4" />


    </group>

</menu>